--- a/teste.html
+++ b/teste.html
@@ -4,6 +4,6 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <p>Criando este arquivo html para usar como aprendizado no curso de GIT. Deus é bom !</p>
+        <p>Criando este arquivo html para usar como aprendizado no curso de GIT. Deus é bom demais !</p>
     </body>
 </html>
