--- a/teste.html
+++ b/teste.html
@@ -2,6 +2,7 @@
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
+        <title>Teste Html  </title>
     </head>
     <body>
         <p>Criando este arquivo html para usar como aprendizado no curso de GIT. Deus é bom demais !</p>
