Adicionando Titulo ao arquivo

--- a/teste.html
+++ b/teste.html
@@ -2,6 +2,7 @@
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
+        <title>Teste Html  </title>
     </head>
     <body>
         <h1>Aprendendo GIT</h1>
