--- a/teste.html
+++ b/teste.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title> Aprendendo Git no Alura</title>
+        <title>Teste Html  </title>
     </head>
     <body>
         <h1>Aprendendo GIT</h1>
-        <h2>....1234</h2>
+        <h2>....</h2>
         <p>Criando este arquivo html para usar como aprendizado no curso de GIT. Deus é bom demais !</p>
     </body>
 </html>
