--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Aprendendo GIT</h1>
         <h2>....</h2>
-        <p>Criando este arquivo html para usar como aprendizado no curso de GIT. Deus é bom demais !</p>
+        <p>Criando este arquivo html para usar como aprendizado no curso de GIT. <strong>Deus é bom demais !</strong> </p>
     </body>
 </html>
