--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Aprendendo GIT</h1>
-        <h2>....</h2>
+        <h2>Subtitulo temporário</h2>
         <p>Criando este arquivo html para usar como aprendizado no curso de GIT. <strong>Deus é bom demais !</strong> </p>
     </body>
 </html>
